<resources>
    <string name="app_name">MedicApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_medico">MedicoActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MedicOS</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Agenda</string>
    <string name="menu_slideshow">Citas Pendientes</string>
    <string name="menu_tools">Historial de citas</string>
    <string name="menu_share">Finanzas</string>
    <string name="menu_send">Cerrar Sesion</string>

    <!-- Strings perfil médico -->
    <string name="nombres">Nombre(s)</string>
    <string name="primerap">Primer Apellido</string>
    <string name="segundoap">Segundo Apellido</string>
    <string name="direccion">Dirección</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_nac">Fecha de Nacimiento</string>
    <string name="rfc">RFC</string>
    <string name="cedula">Cedula Profesional</string>
    <string name="esc">Esc. de Procedencia</string>
    <string name="especilidad">Especialidad</string>

    <!-- Strings observaciones -->
    <string name="tipo">Tipo (Pj. Alergia):</string>
    <string name="descrpcion">Descripción (Pj. Metoclopramida):</string>
    <string name="antiguedad">Antigüedad: (Pj. 2001-05-12)</string>

    <!-- Strings agenda médico -->
    <string name="title_activity_maps">Map</string>

    <!-- Strings meses_finanzas -->
    <string-array name="horario">
        <item>00:00</item>
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
        <item>07:00</item>
        <item>08:00</item>
        <item>09:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>
    <string-array name="meses">
        <item>enero</item>
        <item>febrero</item>
        <item>marzo</item>
        <item>abril</item>
        <item>mayo</item>
        <item>junio</item>
        <item>julio</item>
        <item>agosto</item>
        <item>septiembre</item>
        <item>octubre</item>
        <item>noviembre</item>
        <item>diciembre</item>
    </string-array>

</resources>
