<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.emergentes.medicapp.ui.medico.MedicoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_medico" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.emergentes.medicapp.ui.Agenda.AgendaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_agenda" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.emergentes.medicapp.ui.citapendiente.CitaPendienteFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_cita_pendiente" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.emergentes.medicapp.ui.Citas.CitasFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_citas" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.emergentes.medicapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.emergentes.medicapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>