<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp" />
            <!--  Nombre Label -->
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombres"
                android:selectAllOnFocus="true"/>
            <!--  Primer Apellido Label -->
            <EditText
            android:id="@+id/primerAp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/primerap"
            android:selectAllOnFocus="true"/>
            <!--  Segundo AP Label -->
            <EditText
                android:id="@+id/segundoAp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/segundoap"
                android:selectAllOnFocus="true"/>
            <!--  Fecha Nac -->
            <EditText
                android:id="@+id/fecha_nac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:hint="@string/fecha_nac"
                android:focusable="false" />
            />
            <!--  email -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"/>
            <!--  direccion -->
            <EditText
                android:id="@+id/direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:selectAllOnFocus="true"/>
            <!--  telefono -->
            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:ems="10"
                android:inputType="phone" />
            <!--  specialidad -->
            <EditText
                android:id="@+id/especialidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/especilidad"
                android:inputType="text"
                android:selectAllOnFocus="true"/>
            <!--  cedula -->
            <EditText
                android:id="@+id/cedula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cedula"
                android:inputType="text" />
            <!--  rfc -->
            <EditText
                android:id="@+id/rfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rfc"
                android:inputType="text"
                android:selectAllOnFocus="true"/>
            <EditText
                android:id="@+id/escuela_proc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/esc"
                android:inputType="text"
                android:selectAllOnFocus="true"/>

            <Button
                android:id="@+id/guardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="Guardar" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>